[tool.poetry]
name = "ghost-python-wrapper"
version = "0.1.0"
description = "A simple Python wrapper for Ghost software"
authors = ["Samuel Coveney <scove003@plattsburgh.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^8.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
